# Dragon

./: AllVariable.h  BattleModel.cpp  BattleModel.h  CMakeLists.txt  Player_Date.json  README.md  main.cpp
exportToHTML/: register.cpp.html
include/: allvariables.h  data_operate.cpp  data_operate.h  json.h  random.cpp  random.h  register.cpp  register.h
